<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="#60000000"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/key_0"
        android:textSize="60sp"
        android:autofillHints="no" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="true"
        tools:context="UI.CalculatorActivity">

        <Button
            android:id="@+id/key_AC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_AC"
            android:textColor="@color/red"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_del"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_percent"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_division"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_7"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_8"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_9"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_multiplication"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_4"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_5"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_6"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_subtraction"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_2"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_3"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_addition"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/key_0"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_point"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key_equally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_equally"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </GridLayout>
</LinearLayout>